# sb-kube-app-manager

./: .ai-chatgpt  .cursorrules  .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CHANGELOG_V3.md  CLAUDE.md  CONTEXT_MAP.md  CONTRIBUTING.md  DOC_FIX.md  Deploy.md  Developer.md  EXAMPLES_COVERAGE_ANALYSIS.md  ISSUE.md  LICENSE  LINT_FIX_COMPLETE.md  LLM_GUIDE.md  Makefile  PRODUCT.md  README.md  SECURITY_FIXES.md  SPEC.md  TECH_STACK.md  TEST.md  USAGE.md  analyze_lint.py  analyze_mypy_errors.py  apply_mypy_fixes.py  auto_fix_lint.py  check_current_status.py  check_final_lint.py  check_lint.py  check_lint_final.py  check_lint_status.py  check_status.py  comprehensive_lint.py  (+38 more)
.ai/: context.yaml  rules.md  semantic_index.yaml
.cursor/rules/: myrule.mdc  python-simple.mdc  review-gates.mdc
.github/workflows/: e2e.yml  python-publish.yml  test.yml
.make/: build.mk  ci.mk  clean.mk  dev.mk  help.mk  install.mk  lint.mk  status.mk  test.mk
.sbkube/workflows/: full-ci-cd.yaml  quick-deploy.yaml
data/: tasks.json
docs/: INDEX.md  MIGRATION.md  MIGRATION_V3.md  MIGRATION_v0.8.0.md  RELEASE_v0.8.0.md  RELEASE_v0.9.0.md
docs/00-product/: go-migration-proposal.md  product-definition.md  product-spec.md  target-users.md  vision-roadmap.md
docs/01-getting-started/: README.md
docs/02-features/: README.md  application-types.md  architecture.md  commands.md  commands.md.backup  hooks-guide.md  hooks-migration-guide.md  hooks-reference.md  hooks.md  llm-friendly-output.md  workspace-guide.md
docs/03-configuration/: README.md  chart-customization.md  config-schema.md  helm-chart-types.md  migration-guide.md  migration-v0.5.md  migration.md  sources-schema.md  unified-config-schema.md  workspace-schema.md  workspace-schema.yaml
docs/04-development/: README.md  architecture-patterns.md  coding-standards.md  quick-commands.md  testing.md
docs/05-best-practices/: directory-structure.md  storage-management.md
docs/05-deployment/: README.md
docs/06-deployment/: deployment-guide.md
docs/06-examples/: README.md
docs/07-troubleshooting/: README.md  chart-collision-issues.md  common-dev-issues.md  deployment-failures.md  error-reference.md  faq.md  storage-issues.md
docs/08-tutorials/: 01-getting-started.md  02-multi-app-deployment.md  03-production-deployment.md  04-customization.md  05-migrating-to-v080.md  05-troubleshooting.md  05-version-migration.md  06-using-llm-output.md  README.md
docs/99-internal/: backlog.md  claude-instructions.md  doc-fixes.md  docs-review-2025-01-24.md  documentation-guidelines.md  hooks-improvement.md  implementation-plan-run-command.md  usability-improvements.md
docs/hooks/: hooks-improvement.md
docs/tutorials/: 01-getting-started.md  02-multi-app-deployment.md  03-production-deployment.md  04-customization.md  05-troubleshooting.md  README.md
examples/: HELM_EXAMPLES_AUDIT.md  README-v0.2.md  README.md  UPDATES.md
examples/advanced-overrides/: README.md  config.yaml  grafana-values.yaml  sbkube.yaml  sources.yaml
examples/app-dirs-explicit/: README.md  sbkube.yaml  sources.yaml
examples/app-group-management/: README.md  config.yaml  sbkube.yaml  sources.yaml  test-history.sh  test-status.sh
examples/apply-workflow/: README.md  config.yaml  sources.yaml
examples/basic/: README.md  config.yaml  postgres.yaml  redis.yaml  sources.yaml
examples/basic-configs/: README.md  multi-app.yaml
examples/chart-patches/: README.md  config.yaml  prometheus-values.yaml
examples/cluster-global-values/: README.md  cluster-values.yaml  config.yaml  sbkube.yaml  sources.yaml
examples/complete-workflow/: README.md  config.yaml  sbkube.yaml  sources.yaml
examples/delete/: README.md
examples/dependency-chain/: README.md  config.yaml  sbkube.yaml  sources.yaml
examples/deploy/: README.md
examples/documentation-as-code/: README.md  config.yaml  sbkube.yaml  sources.yaml
examples/force-update/: README.md  config.yaml  sources.yaml
examples/git-standalone/: README.md  config.yaml  sources.yaml
examples/hooks/: README.md  config.yaml  sbkube.yaml
examples/hooks-basic-all/: README.md  config.yaml  redis-values.yaml  sbkube.yaml
examples/hooks-manifests/: README.md  config.yaml  sbkube.yaml
examples/hooks-phase3/: README.md  config.yaml  sbkube.yaml  sources.yaml
examples/hooks-phase4/: README.md  config.yaml  sbkube.yaml
examples/hooks-pre-deploy-tasks/: README.md  config.yaml  postgres-values.yaml  sbkube.yaml
examples/k3scode/: README.md  config-browserless.yml  sbkube.yaml  sources.yaml
examples/kustomize-example/: README.md  config.yaml
examples/multi-app-groups/: README.md  sbkube.yaml  sources-selective.yaml  sources.yaml
examples/multi-source/: README.md  config.yaml  nginx-values.yaml  postgres-values.yaml  redis-values.yaml  sbkube.yaml  sources-dev.yaml  sources-prod.yaml  sources-staging.yaml  sources.yaml
examples/override-with-files/: .gitignore  README.md  config.yaml  sbkube.yaml  sources.yaml
examples/overrides/: README.md
examples/prepare/: README.md
examples/state-management/: README.md  config.yaml  sources.yaml
examples/template/: README.md
examples/upgrade/: README.md
examples/use-cases/: README.md
examples/v3-overrides/: config.yaml  sources.yaml
examples/workspace-multi-phase/: README.md  sbkube.yaml  (+1 more)
sbkube/: __init__.py  cli.py  config_model.py  exceptions.py  validate_sources.py
schemas/: config.schema.json  sources.schema.json
tasks/: qa-result.md
tests/: README.md  TEST_STRATEGY.md  conftest.py  test_build.py  test_build_customization.py  test_build_v3.py  test_cli_help.py  test_cluster_config.py  test_common_patterns.py  test_config_model.py  test_config_v3.py  test_delete.py  test_deploy.py  test_deploy2.py  test_deployment_state.py  test_error_formatting.py  test_error_scenarios.py  test_full_pipeline.py  test_hooks_integration.py  test_imports.py  test_prepare.py  test_sources_app_dirs.py  test_template.py  test_upgrade.py  test_workflow.py  test_workflow_v3.py
tools/: mcp_server_sbkube_docs.py
(+884 files in other folders)
